; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/security/extr_security.c_security_inode_getsecurity.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/security/extr_security.c_security_inode_getsecurity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (%struct.inode*, i8*, i8**, i32)* }
%struct.inode = type { i32 }

@security_ops = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @security_inode_getsecurity(%struct.inode* %0, i8* %1, i8** %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.inode*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8** %2, i8*** %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load %struct.inode*, %struct.inode** %6, align 8
  %11 = call i32 @IS_PRIVATE(%struct.inode* %10)
  %12 = call i64 @unlikely(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %24

15:                                               ; preds = %4
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @security_ops, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32 (%struct.inode*, i8*, i8**, i32)*, i32 (%struct.inode*, i8*, i8**, i32)** %17, align 8
  %19 = load %struct.inode*, %struct.inode** %6, align 8
  %20 = load i8*, i8** %7, align 8
  %21 = load i8**, i8*** %8, align 8
  %22 = load i32, i32* %9, align 4
  %23 = call i32 %18(%struct.inode* %19, i8* %20, i8** %21, i32 %22)
  store i32 %23, i32* %5, align 4
  br label %24

24:                                               ; preds = %15, %14
  %25 = load i32, i32* %5, align 4
  ret i32 %25
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @IS_PRIVATE(%struct.inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
